--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ target/
 Untitled.ipynb
 mem
 .vscode/*
+Demonstration.ipynb
+docs.zip
+make.bat
+ruptures.sublime-project
+ruptures.sublime-workspace
+test.ipynb
