--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -11,6 +11,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f docs/requirements.txt ]; then pip install -r docs/requirements.txt; fi
+        with:
+          python-version: '3.x'
     - name: Install ruptures
       run: |
         pip install -e .
