--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -7,15 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Install dependencies
+    - name: Install dependencies and ruptures
       run: |
         python -m pip install --upgrade pip
         if [ -f docs/requirements.txt ]; then pip install -r docs/requirements.txt; fi
+        pip install -e .
         with:
           python-version: '3.x'
-    - name: Install ruptures
-      run: |
-        pip install -e .
     - uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
