--- a/.github/workflows/publish-doc.yml
+++ b/.github/workflows/publish-doc.yml
@@ -19,9 +19,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "docs/"
+    - name: Install dependencies
+      run: |
+        pip install -r docs/requirements.txt
+    - name: Build documentation
+      run: |
+        cd docs
+        make html
     - uses: actions/upload-artifact@v1
       with:
         name: DocumentationHTML
