add flake8-bugbear to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,5 +8,5 @@ repos:
     rev: ''  # pick a git hash / tag to point to
     hooks:
     - id: flake8
-    additional_dependencies: [flake8-docstrings]
+    additional_dependencies: [flake8-docstrings, flake8-bugbear]
 
