--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,11 @@ repos:
   rev: v1.6.0
   hooks:
     - id: python-no-eval  # A quick check for the eval() built-in function.
+- repo: https://github.com/myint/docformatter
+  rev: v1.3.1
+  hooks:
+    - id: docformatter
+      args: [--in-place]
 -   repo: https://github.com/psf/black
     rev: stable
     hooks:
@@ -22,5 +27,5 @@ repos:
     rev: 3.8.3
     hooks:
     - id: flake8
-    additional_dependencies: [flake8-docstrings, flake8-bugbear, flake8-spellcheck, flake8-import-order]
+      additional_dependencies: [flake8-docstrings, flake8-bugbear, flake8-spellcheck, flake8-import-order]
 
