--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         # Semantic version range syntax or exact version of a Python version
-        python-version: '3.x' 
+        python-version: '3.x'
     # You can test your matrix by printing the current Python version
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
@@ -25,7 +25,7 @@ jobs:
         pip install -e .
     - name: Install dependencies
       run: |
-        pip install -r docs/requirements.txt
+        pip install -r requirements-dev.txt
     - name: Build documentation
       run: |
         cd docs
