--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements-dev.txt
+    - name: Run notebooks
+      run: |
+        jupyter nbconvert --to notebook --execute notebooks/simple-example.ipynb
     - name: Build documentation
       run: |
         mkdocs build
