Also run basic-usage.ipynb

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         jupyter nbconvert --to notebook --execute notebooks/simple-example.ipynb
         mv notebooks/simple-example.nbconvert.ipynb notebooks/simple-example.ipynb
+        jupyter nbconvert --to notebook --execute notebooks/basic-usage.ipynb
+        mv notebooks/basic-usage.nbconvert.ipynb notebooks/basic-usage.ipynb
     - name: Build documentation
       run: |
         mkdocs build
