--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -24,7 +24,7 @@ jobs:
         pip install -r requirements-dev.txt
     - name: Run notebooks
       run: |
-        jupyter nbconvert --inplace --to notebook --execute notebooks/*.ipynb
+        jupyter nbconvert --inplace --to notebook --ExecutePreprocessor.kernel_name=python --execute notebooks/*.ipynb
     - name: Build documentation
       run: |
         mkdocs build
