--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,6 @@ repos:
     - id: check-merge-conflict  # Check for files that contain merge conflict strings.
     - id: check-yaml  # This hook checks yaml files for parseable syntax.
     - id: detect-private-key  # Detects the presence of private keys.
-    - id: name-tests-test # This verifies that test files are named correctly.
     - id: requirements-txt-fixer  # Sorts entries in requirements.txt.
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.6.0
@@ -28,4 +27,7 @@ repos:
   hooks:
     - id: flake8
       additional_dependencies: [flake8-docstrings, flake8-bugbear, flake8-spellcheck, flake8-import-order]
-
+- repo: https://github.com/kynan/nbstripout
+  rev: master
+  hooks:
+    - id: nbstripout
