--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ docs_dir: docs
 site_dir: site
 plugins:
   - search
-  - mkdocstrings
+              - "!^_"  # exlude all members starting with _
   - nbconvert:
       input_dir: notebooks
       output_dir: notebooks
