--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,15 @@ docs_dir: docs
 site_dir: site
 plugins:
   - search
+  - mkdocstrings:
+      watch:
+        - ruptures
+      handlers:
+        python:
+          selection:
+            filters:
               - "!^_"  # exlude all members starting with _
+              - "^__init__$"  # but always include __init__ modules and methods
   - nbconvert:
       input_dir: notebooks
       output_dir: notebooks
