--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,12 @@ nav:
       - Base: code-reference/base-reference.md
       - Costs:
           - 'CostL1': code-reference/costs/costl1-reference.md
+          - 'CostL2': code-reference/costs/costl2-reference.md
+          - 'CostNormal': code-reference/costs/costnormal-reference.md
+          - 'CostRbf': code-reference/costs/costrbf-reference.md
+          - 'CostLinear': code-reference/costs/costlinear-reference.md
+          - 'CostRank': code-reference/costs/costrank-reference.md
+          - 'CostMl': code-reference/costs/costml-reference.md
           - Auto regressive: code-reference/costs/costautoregressive-reference.md
   - About:
     - 'Release notes': release-notes.md
