--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install ruptures
       run: |
         python -m pip install --upgrade pip
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
         pip install -e .
     - name: Install dependencies
       run: |
