--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            python3 -m pip install --upgrade pip
             pip3 install -r requirements.txt
             pip3 install -r requirements-dev.txt
             python3 setup.py build_ext --inplace
