--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -27,10 +27,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Install ruptures
       run: |
-        pip install -e .
+        python setup.py build_ext --inplace
+        python setup.py install
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
