--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            python3 -m pip install --upgrade pip
-            pip3 install -r requirements.txt
-            pip3 install -r requirements-dev.txt
-            python3 setup.py build_ext --inplace
-            python3 setup.py install
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+            pip install -r requirements-dev.txt
+            python setup.py build_ext --inplace
+            python setup.py install
 
 
       - save_cache:
