Try to modify the publish .yml to build the Cython

--- a/.github/workflows/publish-package-to-pypi.yml
+++ b/.github/workflows/publish-package-to-pypi.yml
@@ -24,5 +24,6 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
+        python setup.py build_ext --inplace
         python setup.py sdist bdist_wheel
         twine upload dist/*
