--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
   rev: 3.8.3
   hooks:
     - id: flake8
-      additional_dependencies: [flake8-docstrings, flake8-bugbear, flake8-spellcheck, flake8-import-order]
+      # additional_dependencies: [flake8-docstrings, flake8-bugbear, flake8-spellcheck, flake8-import-order]
 - repo: https://github.com/kynan/nbstripout
   rev: master
   hooks:
@@ -35,3 +35,9 @@ repos:
     rev: v1.8.0
     hooks:
     - id: blacken-docs
+- repo: https://github.com/nbQA-dev/nbQA
+  rev: 0.4.1
+  hooks:
+    - id: nbqa-black
+      args: [--nbqa-mutate]
+      # additional_dependencies: [black==20.8b1]
