--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,7 +78,7 @@ nav:
       - Base classes: code-reference/base-reference.md
       - Search methods:
           - Dynp: code-reference/detection/dynp-reference.md
-          - KernelDynp: code-reference/detection/kerneldynp-reference.md
+          - KernelCPD: code-reference/detection/KernelCPD-reference.md
           - Pelt: code-reference/detection/pelt-reference.md
           - Binseg: code-reference/detection/binseg-reference.md
           - BottomUp: code-reference/detection/bottomup-reference.md
